<resources>
    <string name="app_name">Lab Exam 2</string>
    <string name="onboardingText1">Add your Ingredients and get the recipes</string>
    <string name="onboardingText2">Add your Ingredients typing or barcode scanning easily</string>
    <string name="onboardingText3">Variety of recipe are available</string>
    <string name="onboardingBtnNxt">NEXT</string>
    <string name="onboardingBtnSkip">SKIP</string>
    <string name="onboardingBtn3">START COOKING</string>
    <string name="sign_in">Sign In</string>
    <string name="email">inupaudara@gmail.com</string>
    <string name="emailLabel">Email</string>
    <string name="password">*************</string>
    <string name="passwordLabel">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_inBtn">Sign In</string>
    <string name="toSignup">I don’t have an account?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="sign_in_now">sign In now</string>
    <string name="btnSign_up">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="nameLabel">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="toSignin">Already have an account?</string>
    <string name="hello_blank_fragment">Home fragment</string>
    <string name="name">Name</string>
    <string name="recipies_based_on_your_kitchen_ingredients">Recipies based on your kitchen ingredients</string>
    <string name="hi">Hello</string>
    <string name="recipes_based_on_your_kitchen_ingredients">Recipes based on your kitchen ingredients</string>
    <string name="see_all">See All</string>
    <string name="breakfast">Breakfast</string>
    <string name="inupa">Inupa</string>
    <string name="milk_rice">Milk Rice</string>
    <string name="pancake">Pancake</string>
    <string name="hoppers">Hoppers</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="saved_recipe">Saved recipe</string>
    <string name="favourite_recipe">Favourite recipe</string>
    <string name="your_ingrediants">Your ingrediants</string>
    <string name="fruits">Fruits</string>
    <string name="_3_fruits">3 Fruits</string>
    <string name="view">View</string>
    <string name="plus">+</string>
    <string name="banana">Banana</string>
    <string name="_5">5</string>
    <string name="total_time_30_mins">Total Time: 30 mins</string>
    <string name="difficulty_beginner">Difficulty: Beginner</string>
    <string name="servings">Servings</string>
    <string name="_1">1</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_ingrediants">Add Ingrediants</string>
    <string name="add">Add</string>
    <string name="search_for_a_food">Search for a Food</string>
    <string name="minus">-</string>
    <string name="discover_your_recipe">Discover Your Recipe</string>
    <string name="recent_search">Recent search</string>
    <string name="kottu">Kottu</string>
    <string name="clear_all">Clear all</string>
    <string name="popular_recipe">Popular recipe</string>
    <string name="biryani">Biryani</string>
    <string name="directions">Directions</string>
</resources>