<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".SignupActivity"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColor="@color/primary"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/nameLabel"
            android:textSize="18sp"
            android:textColor="@color/primary"/>

        <EditText
            android:id="@+id/nameUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_your_name"
            android:textColor="@color/black"
            android:textColorHint="@color/editText"
            android:inputType="text"
            android:textSize="16sp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/editTextBg"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailLabel"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/primary"/>

        <EditText
            android:id="@+id/emailUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_your_email"
            android:textColor="@color/editText"
            android:textColorHint="@color/editText"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/editTextBg"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/passwordLabel"
            android:textSize="18sp"
            android:textColor="@color/primary"/>

        <EditText
            android:id="@+id/passwordUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/editText"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/editTextBg"
            android:padding="10dp"/>


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/btnSign_up"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:backgroundTint="@color/primary"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="180dp"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toSignin"
                android:textColor="@color/black"
                android:layout_marginStart="70dp"/>

            <Button
                android:id="@+id/btnSignInNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_now"
                android:textColor="@color/primary"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>