<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".ProfileFragment"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/mainProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">



            <TextView
                android:id="@+id/btnSignOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:text="@string/sign_out"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:text="@string/profile"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/me"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textColor="@color/primary"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/inupa"
            android:textColor="@color/editText"
            android:textColorHint="@color/editText"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/editTextBg"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/emailLabel"
            android:textSize="18sp"
            android:textColor="@color/primary"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/editText"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/editTextBg"
            android:padding="10dp"/>
        <Button
            android:id="@+id/btnUpdateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:text="@string/update_profile"
            android:textSize="18sp"
            android:backgroundTint="@color/primary"/>

        <LinearLayout
            android:id="@+id/layoutH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved_recipe"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/favourite_recipe"/>


        </LinearLayout>
    </LinearLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainProfile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutFood1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:orientation="vertical"

                app:layout_constraintDimensionRatio="H,5:3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/layout2">


                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_margin="3dp"
                    android:padding="8dp"
                    android:src="@drawable/milk"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/milk_rice"
                    android:textSize="15sp"
                    android:textStyle="bold"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutFood2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="H,5:3"
                app:layout_constraintStart_toEndOf="@id/layoutFood1"
                app:layout_constraintEnd_toStartOf="@id/layoutFood3"
                app:layout_constraintTop_toTopOf="@id/layout2">


                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_margin="3dp"
                    android:padding="8dp"
                    android:src="@drawable/pancake" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/pancake"
                    android:textSize="15sp"
                    android:textStyle="bold"/>


            </LinearLayout>



            <LinearLayout
                android:id="@+id/layoutFood3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:orientation="vertical"

                app:layout_constraintDimensionRatio="H,5:3"
                app:layout_constraintStart_toEndOf="@id/layoutFood2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/layout2">


                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_margin="3dp"
                    android:padding="8dp"
                    android:src="@drawable/hoppers" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hoppers"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutFood4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:orientation="vertical"

                app:layout_constraintDimensionRatio="H,5:3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutFood1">


                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_margin="3dp"
                    android:padding="8dp"
                    android:src="@drawable/kottu"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Kottu"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutFood5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="H,5:3"
                app:layout_constraintStart_toEndOf="@id/layoutFood1"
                app:layout_constraintEnd_toStartOf="@id/layoutFood3"
                app:layout_constraintTop_toBottomOf="@id/layoutFood1">


                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_margin="3dp"
                    android:padding="8dp"
                    android:src="@drawable/briyani" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Briyani"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutFood6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:orientation="vertical"

                app:layout_constraintDimensionRatio="H,5:3"
                app:layout_constraintStart_toEndOf="@id/layoutFood2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutFood1">


                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_margin="3dp"
                    android:padding="8dp"
                    android:src="@drawable/spagethi" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Spaghetti"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>